fixed alignment

--- a/misc/subaru/whylegacy/style.css
+++ b/misc/subaru/whylegacy/style.css
@@ -1,5 +1,5 @@
 html, body, div, span {
-    margin: 0 0 0 0px;
+    margin: 0 0 0 0;
     padding: 0px;
     background: url("");
     position: center;
@@ -19,10 +19,16 @@ font {
   background-color: #ffffff;
   color: #000000;
   padding: 0px;
-  margin: 0;
-  border: px solid #E3E3E3;
+  position: relative;
   text-align: center;
-  font-family: Helvetica, sans-serif; }
+  font-family: Helvetica, sans-serif;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 80rem;
+  }
+
+
+}
 
 .intro {
   text-align: center;
